# AI-Legal-Agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: document.ipynb
