[project]
name = "ai-legal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-search>=8.0.2",
    "faiss-cpu>=1.11.0",
    "hf-xet>=1.1.2",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.2.0",
    "langgraph>=0.4.5",
    "pypdf>=5.5.0",
    "streamlit==1.40.2",
]
